some more base styles setup

--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
 
     <title>Eden - A project for onboarding people</title>
   </head>
-  <body>
+  <body class="antialiased">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
